--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Parse, param, stringify, parseUrl and parseUrl with url",
   "main": "index.ts",
   "scripts": {
-    "dev": "lilith run dev"
+    "dev": "lilith run dev",
+    "build":"lilith run build"
   },
   "repository": {
     "type": "git",
@@ -13,11 +14,11 @@
   "author": "@qfed/wwx",
   "license": "ISC",
   "dependencies": {
-    "@qfed/lilith": "^0.0.9",
+    "@qfed/lilith": "^0.0.10",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "@qfed/lilith-compiler": "^0.0.4"
+    "@qfed/lilith-compiler": "^0.0.5"
   }
 }
