--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "lilith run dev",
-    "build":"lilith run build"
+    "build": "lilith run build"
   },
   "repository": {
     "type": "git",
@@ -14,9 +14,10 @@
   "author": "@qfed/wwx",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-transform-modules-umd": "^7.7.4",
     "@qfed/lilith": "^0.0.10",
+    "@qfed/lilith-compiler": "^0.0.5",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "@qfed/lilith-compiler": "^0.0.5"
+    "react-dom": "^16.12.0"
   }
 }
