--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
       "module": "UMD",
+      "target": "es5",
       "noImplicitAny": true,
       "removeComments": true,
       "preserveConstEnums": true,
